Update bug report and create user management
